unpackaged/main/default/objects/ACG_Reimbursement__c/fields/Problem_Code__c.field-meta.xml
<CustomField>
    <fullName>Problem_Code__c</fullName>
    <label>Problem Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>1B</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>2A</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>3B</fullName>
            </value>
            <value>
                <fullName>3D</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>5F</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>6A</fullName>
            </value>
            <value>
                <fullName>6B</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>BK</fullName>
            </value>
            <value>
                <fullName>7A</fullName>
                <isActive>false</isActive>
                <label>7A</label>
            </value>
            <value>
                <fullName>7B</fullName>
                <isActive>false</isActive>
                <label>7B</label>
            </value>
            <value>
                <fullName>T0</fullName>
                <isActive>false</isActive>
                <label>T0</label>
            </value>
            <value>
                <fullName>T1</fullName>
                <isActive>false</isActive>
                <label>T1</label>
            </value>
            <value>
                <fullName>T2</fullName>
                <isActive>false</isActive>
                <label>T2</label>
            </value>
            <value>
                <fullName>T3</fullName>
                <isActive>false</isActive>
                <label>T3</label>
            </value>
            <value>
                <fullName>T4</fullName>
                <isActive>false</isActive>
                <label>T4</label>
            </value>
            <value>
                <fullName>T5</fullName>
                <isActive>false</isActive>
                <label>T5</label>
            </value>
            <value>
                <fullName>T6</fullName>
                <isActive>false</isActive>
                <label>T6</label>
            </value>
            <value>
                <fullName>T7</fullName>
                <isActive>false</isActive>
                <label>T7</label>
            </value>
            <value>
                <fullName>T8</fullName>
                <isActive>false</isActive>
                <label>T8</label>
            </value>
            <value>
                <fullName>T9</fullName>
                <isActive>false</isActive>
                <label>T9</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>