unpackaged/main/default/objects/ACG_Reimbursement__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2T</fullName>
                <label>2nd Tow</label>
            </value>
            <value>
                <fullName>AC</fullName>
                <label>Accident</label>
            </value>
            <value>
                <fullName>AM</fullName>
                <label>Additional Monies Approved</label>
            </value>
            <value>
                <fullName>AP</fullName>
                <label>AP Re-issue</label>
            </value>
            <value>
                <fullName>BD</fullName>
                <label>Breakdown</label>
            </value>
            <value>
                <fullName>ET</fullName>
                <label>Extrication</label>
            </value>
            <value>
                <fullName>LK</fullName>
                <label>Locksmith</label>
            </value>
            <value>
                <fullName>LO</fullName>
                <label>Lockout</label>
            </value>
            <value>
                <fullName>MD</fullName>
                <label>Medical Emergency</label>
            </value>
            <value>
                <fullName>MR</fullName>
                <label>Member Relations</label>
            </value>
            <value>
                <fullName>OT</fullName>
                <label>Other</label>
            </value>
            <value>
                <fullName>PC</fullName>
                <label>Police Call/illegal</label>
            </value>
            <value>
                <fullName>RE</fullName>
                <label>Re-issue</label>
            </value>
            <value>
                <fullName>ST</fullName>
                <label>Stolen &amp; Recovered</label>
            </value>
            <value>
                <fullName>Employee Approved</fullName>
                <isActive>false</isActive>
                <label>Employee Approved</label>
            </value>
            <value>
                <fullName>Escheat</fullName>
                <isActive>false</isActive>
                <label>Escheat</label>
            </value>
            <value>
                <fullName>LKSMTH UNAVAIL MBR DECLINE TOW</fullName>
                <isActive>false</isActive>
                <label>LKSMTH UNAVAIL MBR DECLINE TOW</label>
            </value>
            <value>
                <fullName>LKSMTH UNAVAIL MBR OPT TOW</fullName>
                <isActive>false</isActive>
                <label>LKSMTH UNAVAIL MBR OPT TOW</label>
            </value>
            <value>
                <fullName>Legal</fullName>
                <isActive>false</isActive>
                <label>Legal</label>
            </value>
            <value>
                <fullName>Legal Defense</fullName>
                <isActive>false</isActive>
                <label>Legal Defense</label>
            </value>
            <value>
                <fullName>Member Choice</fullName>
                <isActive>false</isActive>
                <label>Member Choice</label>
            </value>
            <value>
                <fullName>No Valid Card</fullName>
                <isActive>false</isActive>
                <label>No Valid Card</label>
            </value>
            <value>
                <fullName>No service available</fullName>
                <isActive>false</isActive>
                <label>No service available</label>
            </value>
            <value>
                <fullName>On Your Way Transportation</fullName>
                <isActive>false</isActive>
                <label>On Your Way Transportation</label>
            </value>
            <value>
                <fullName>Phone Problem</fullName>
                <isActive>false</isActive>
                <label>Phone Problem</label>
            </value>
            <value>
                <fullName>RV Reimbursement</fullName>
                <isActive>false</isActive>
                <label>RV Reimbursement</label>
            </value>
            <value>
                <fullName>Service Available</fullName>
                <isActive>false</isActive>
                <label>Service Available</label>
            </value>
            <value>
                <fullName>Temporary Plus</fullName>
                <isActive>false</isActive>
                <label>Temporary Plus</label>
            </value>
            <value>
                <fullName>Travel Accident</fullName>
                <isActive>false</isActive>
                <label>Travel Accident</label>
            </value>
            <value>
                <fullName>Turnpike Call</fullName>
                <isActive>false</isActive>
                <label>Turnpike Call</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>