unpackaged/main/default/objects/ACG_Reimbursement__c/fields/Receipt_Sales_Tax__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Sales_Tax__c</fullName>
    <label>Receipt Sales Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>