unpackaged/main/default/objects/ACG_Reimbursement__c/fields/Receipt_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Subtotal__c</fullName>
    <label>Receipt Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>