unpackaged/main/default/objects/ACG_Reimbursement__c/fields/State_Member__c.field-meta.xml
<CustomField>
    <fullName>State_Member__c</fullName>
    <formula>ACG_Member_Name__r.BillingState</formula>
    <label>State</label>
    <type>Text</type>
</CustomField>