unpackaged/main/default/objects/ACG_Reimbursement__c/fields/Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Street_Address__c</fullName>
    <formula>ACG_Member_Name__r.BillingStreet</formula>
    <label>Street Address</label>
    <type>Text</type>
</CustomField>