unpackaged/main/default/objects/ACG_Reimbursement__c/fields/Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>Tax_Rate__c</fullName>
    <formula>IF( 
 AND( 
  NOT( ISNULL( Receipt_Subtotal__c ) ) ,
  NOT( ISNULL( Receipt_Sales_Tax__c ) ) ,
  NOT( ISNULL( Receipt_Total__c ) )
 ) , 
 (( Receipt_Total__c -  Receipt_Subtotal__c )/ Receipt_Subtotal__c) , 
 NULL
)</formula>
    <label>Tax Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>