unpackaged/main/default/objects/ACG_Reimbursement__c/fields/Use_Alternative_Address__c.field-meta.xml
<CustomField>
    <fullName>Use_Alternative_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Alternative Address</label>
    <type>Checkbox</type>
</CustomField>