unpackaged/main/default/objects/ACG_Reimbursement__c/fields/Yr_Joined_Club__c.field-meta.xml
<CustomField>
    <fullName>Yr_Joined_Club__c</fullName>
    <formula>ACG_Member_Name__r.MemberSince__c</formula>
    <label>Yr Joined Club</label>
    <type>Text</type>
</CustomField>