unpackaged/main/default/objects/ACG_Reimbursement__c/fields/Zip__c.field-meta.xml
<CustomField>
    <fullName>Zip__c</fullName>
    <formula>ACG_Member_Name__r.BillingPostalCode</formula>
    <label>Zip</label>
    <type>Text</type>
</CustomField>