unpackaged/main/default/objects/ACG_Reimbursement__c/validationRules/ACG_Reason_Is_Null.validationRule-meta.xml
<ValidationRule>
    <fullName>ACG_Reason_Is_Null</fullName>
    <active>false</active>
    <description>Reason should not be blank</description>
    <errorConditionFormula>AND(
NOT($Setup.ACG_Skip_Automations__c.ACG_Skip_Validation_Rules__c),
NOT(ISPICKVAL(ACG_Decision__c, &quot;&quot;)),
ISPICKVAL(ACG_Reason__c, &quot;&quot;)
)</errorConditionFormula>
    <errorDisplayField>ACG_Reason__c</errorDisplayField>
    <errorMessage>Reason is null. A value must be selected once decision is updated.</errorMessage>
</ValidationRule>