unpackaged/main/default/objects/ACG_Reimbursement__c/validationRules/Address_change_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Address_change_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>AND(NOT($Setup.ACG_Skip_Automations__c.ACG_Skip_Validation_Rules__c) ,ACG_Address_change__c  = False,
OR(
        NOT(ISBLANK( ACG_Address__c )),
        NOT(ISBLANK( Address_Line_2__c )),
        NOT(ISBLANK(  City__c  )),
        NOT(ISBLANK(TEXT( State__c )))
        )
       )</errorConditionFormula>
    <errorMessage>Review Address section. Clear address fields if address change is not desired.</errorMessage>
</ValidationRule>