unpackaged/main/default/objects/ACG_Reimbursement__c/validationRules/Address_change_Validation_2.validationRule-meta.xml
<ValidationRule>
    <fullName>Address_change_Validation_2</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT($Setup.ACG_Skip_Automations__c.ACG_Skip_Validation_Rules__c),ACG_Address_change__c = True,
OR(
ISBLANK( ACG_Address__c ),
ISBLANK( City__c ),
ISBLANK(TEXT( State__c )),
ISBLANK( Zip_Code__c ))
)</errorConditionFormula>
    <errorMessage>Review Address section. Required fields for address change have not been completed.</errorMessage>
</ValidationRule>