unpackaged/main/default/objects/ACG_Reimbursement__c/validationRules/Member_Email_Should_Be_Confirmed.validationRule-meta.xml
<ValidationRule>
    <fullName>Member_Email_Should_Be_Confirmed</fullName>
    <active>true</active>
    <description>Please confirm if the member&#39;s email is accurate on reimbursement request</description>
    <errorConditionFormula>AND(
NOT($Setup.ACG_Skip_Automations__c.ACG_Skip_Validation_Rules__c),
OR(
ISPICKVAL(ACG_Status__c,&quot;Decision Submitted&quot;),
ISPICKVAL(ACG_Status__c,&quot;Decision Approved&quot;)
),
NOT(Email_Confirmed__c)
)</errorConditionFormula>
    <errorDisplayField>Email_Confirmed__c</errorDisplayField>
    <errorMessage>Please confirm the member&#39;s email is accurate. If the member has not included their email within the reimbursement request, please clear the email address before confirming</errorMessage>
</ValidationRule>