unpackaged/main/default/objects/ACG_Reimbursement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ACG_Member_Name__c</columns>
    <columns>AAA_Call__c</columns>
    <columns>ACG_Decision__c</columns>
    <columns>ACG_Payment_Comments__c</columns>
    <columns>ACG_Status__c</columns>
    <columns>ACG_Email__c</columns>
    <columns>Amount_Approved__c</columns>
    <columns>Member_Id__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>ACG_Charge_Entitlement__c</columns>
    <columns>Amount_Approved_Allocation__c</columns>
    <columns>ACG_Amount_Requested__c</columns>
    <columns>ACG_District_Codes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service_Contract__c</field>
        <operation>equals</operation>
    </filters>
    <label>All</label>
</ListView>