unpackaged/main/default/objects/ACG_Reimbursement__c/listViews/Denied.listView-meta.xml
<ListView>
    <fullName>Denied</fullName>
    <columns>NAME</columns>
    <columns>ACG_Member_Name__c</columns>
    <columns>Club_Code__c</columns>
    <columns>ACG_Date_Received__c</columns>
    <columns>ACG_Amount_Requested__c</columns>
    <columns>AAA_Call__c</columns>
    <columns>ACG_Reason__c</columns>
    <columns>ACG_Status__c</columns>
    <columns>ACG_Decision__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACG_Decision__c</field>
        <operation>equals</operation>
        <value>Denied</value>
    </filters>
    <label>Denied</label>
</ListView>