unpackaged/main/default/objects/ACG_Reimbursement__c/listViews/New_Reimbursements.listView-meta.xml
<ListView>
    <fullName>New_Reimbursements</fullName>
    <columns>NAME</columns>
    <columns>ACG_Member_Name__c</columns>
    <columns>ACG_Date_Received__c</columns>
    <columns>ACG_Amount_Requested__c</columns>
    <columns>AAA_Call__c</columns>
    <columns>ACG_Reason__c</columns>
    <columns>ACG_Decision__c</columns>
    <columns>ACG_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACG_Decision__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <filters>
        <field>ACG_Status__c</field>
        <operation>equals</operation>
        <value>Decision Approved</value>
    </filters>
    <filters>
        <field>ACG_Date_Received__c</field>
        <operation>greaterOrEqual</operation>
        <value>3/6/2025</value>
    </filters>
    <label>New Reimbursements</label>
</ListView>